--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "bootstrap-icons": "^1.13.1",
     "framer-motion": "^12.23.12",
+    "lenis": "^1.3.11",
     "lucide-react": "^0.542.0",
     "next": "15.5.2",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "sass": "^1.93.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
